cabal-version:   3.14
name:            anonymous-credentials-hs
version:         0.1.0.0
license:         NONE
author:          Samuel Schlesinger
maintainer:      sgschlesinger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Crypto.AnonymousCredentials
    build-depends:    base ^>=4.18.3.0,
                      bytestring >=0.11 && <0.13,
                      vector >=0.12 && <0.14,
                      sigma-proofs
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.18.3.0,
                      vector >=0.12 && <0.14,
                      tasty,
                      tasty-hunit,
                      anonymous-credentials-hs,
                      sigma-proofs
    default-language: Haskell2010
